--- a/src/layout.css
+++ b/src/layout.css
@@ -3,6 +3,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Courgette&display=swap");
 
 .container {
+  min-height: 100vh;
   max-height: auto;
   background-color: #355B6B;
 }
@@ -34,6 +35,7 @@
 h4 {
   font-family: "Lora", serif;
   color: #ffffff;
+  margin-top: 8px;
 }
 hr{
   color: #EFCB84;
